--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.radugunn.app"
         minSdkVersion 20
         targetSdkVersion 30
-        versionCode 6
-        versionName "6.0"
+        versionCode 7
+        versionName "7.0"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -92,6 +92,10 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
    // implementation project(':ciyalibrary')
     implementation files('libs/full.jar')
+
+    implementation 'com.google.android.play:core:1.10.3'
+
+    implementation 'org.jsoup:jsoup:1.13.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
